--- a/app/views/tmpl/masters/construction.html
+++ b/app/views/tmpl/masters/construction.html
@@ -144,7 +144,7 @@
   </script>
 
 
-  	<script type="text/ng-template" id="newGenericMasive.html">
+  	<script type="text/ng-template" id="newGenericConstructionMasive.html">
 
 		<div class="overlay br-30" ng-show="modal.overlay.show">
 			<div style="position:absolute;top: 50%;left:50%;transform: translate(-50%, -50%);">
