--- a/app/views/tmpl/masters/construction.html
+++ b/app/views/tmpl/masters/construction.html
@@ -40,11 +40,11 @@
 									<img src="https://s3-sa-east-1.amazonaws.com/efinding/icons/abajo.png">
 								</a>
 							</div>
-							<div class="col-md-1">
+							<!--div class="col-md-1">
 								<a id="downloadExcel" ng-click="openModalNewGeneric()" uib-tooltip="Carga Masiva">
 									<img src="https://s3-sa-east-1.amazonaws.com/efinding/icons/arriba.png">
 								</a>
-							</div>
+							</div-->
 						</div>
 						<table ng-table="tableParams" show-filter="true" class="table table-custom">
 							<tr ng-repeat="object in $data">
