--- a/app/views/tmpl/masters/construction.html
+++ b/app/views/tmpl/masters/construction.html
@@ -95,6 +95,12 @@
               </div>
             </div>
             <div class="form-group">
+              <label class="col-sm-3 control-label">Jefe SSOMA</label>
+              <div class="col-md-8">
+                <input type="text" id="name" class="form-control underline-input" placeholder="Nombre" value="{{construction.supervisor.attributes.full_name}} - {{construction.supervisor.attributes.rut}}" readonly>
+              </div>
+            </div>
+            <div class="form-group">
               <label class="col-sm-3 control-label">Visitador</label>
               <div class="col-md-8">
                 <input type="text" id="name" class="form-control underline-input" placeholder="Nombre" value="{{construction.visitador.attributes.name}} - {{construction.visitador.attributes.rut}}" readonly>
