--- a/app/views/tmpl/masters/construction.html
+++ b/app/views/tmpl/masters/construction.html
@@ -118,7 +118,7 @@
 		  		</div>
 		  	</div>
             <div class="form-group">
-		  		<label for="inputPassword3" class="col-sm-3 control-label">Experto SSOMA</label>
+		  		<label for="inputPassword3" class="col-sm-3 control-label">Roles</label>
 		  		<div class="col-sm-8">
 		  			<ui-select class="bg-white b-solid br-15" multiple ng-model="construction.experts" close-on-select="true">
 		  				<ui-select-match placeholder="Buscar...">{{$item.fullName}}</ui-select-match>
